k8s-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: istio-ingress
  namespace: istio-system
  #annotations:
    # Enable use of manually pre-defined global static IP
    # kubernetes.io/ingress.global-static-ip-name: static-ip
    # Enable use of a GCP-managed certificate through a ManagedCertificate resource
    # networking.gke.io/managed-certificates: example-certificat
spec:
  rules:
  - host: demoapp.example.com
    http:
      paths:
      - path: /*
        backend:
          # In this case we don't go directly to app-specific services,
          # but first to the Istio ingress-gateway
          # We use port 80 because it is the "ingress-like" port of the ingress-gateway
          serviceName: istio-ingressgateway
          servicePort: 80
  - host: voting.example.com
    http:
      paths:
      - path: /*
        backend:
          # In this case we don't go directly to app-specific services,
          # but first to the Istio ingress-gateway
          # We use port 80 because it is the "ingress-like" port of the ingress-gateway
          serviceName: istio-ingressgateway
          servicePort: 80
